--- a/css/home.css
+++ b/css/home.css
@@ -16,30 +16,42 @@ body {
     height: 100vh;
     background-color: #4f4e4e;
     opacity: 60%;
+    z-index: -1;
 }
 
 .navigation {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
     justify-content: space-between;
-    padding: 100x;
-    height: 100px;
-    color: #f9f5fc;
-    background-color: red;
-    opacity: 100%;
+    padding: 2vh;
+    height: 1.44vh;
 }
 
 .left {
-    margin: 35px 150px;
+    margin: 3.5vh 11vw;
+    color: #f9f5fc;
+    font-size: 3.5vh;
 }
 
 .right {
-    margin: 35px 150px;
-    margin-left: 0px;
+    margin: 4.2vh 11vw;
+    margin-left: 0vh;
 }
 
 .navButton {
     text-decoration: none;
-    margin-right: 25px;
-    color: red;
+    margin-right: 1.8vw;
+    font-size: 2vh;
+    color: #f9f5fc;
+}
+
+.button {
+    border: none;
+    background-color: #CC4C04;
+    color: #f9f5fc;
+    text-align: center;
+    text-decoration: none;
+    padding: 1.2vh 3vw;
+    display: inline-block;
+    font-size: 2vh;
 }
